# pycsou-gsp

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements-conda.txt  requirements.txt  setup.cfg  test.py  tox.ini
doc/: conf.py  index.rst
doc/api/: index.rst
doc/api/graphs/: index.rst
doc/api/operators/: index.rst  pycgsp.linop.base.rst  pycgsp.linop.conv.rst  pycgsp.linop.diff.rst  pycsou_gsp.linop.base.rst  pycsou_gsp.linop.conv.rst  pycsou_gsp.linop.diff.rst
doc/api/tessellations/: index.rst
doc/general/: install.rst
doc/notes/: references.rst
pycgsp/: graph.py
pycgsp/graph/: __init__.py
pycgsp/linop/: __init__.py  base.py  conv.py  diff.py
pycsou_gsp/linop/: __init__.py  base.py  conv.py  diff.py
pycsou_gsp/tessellation/: __init__.py
src/pycgsp/: _operator.py
src/pycgsp/linop/: conv.py
src/pycgsp/operator/linop/: __init__.py  diff.py
