[metadata]
name = pycsou-gsp

description = Graph signal processing extensions for Pycsou.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthieumeo/pycsou-gsp
author = Matthieu SIMEONI
author_email = matthieu.simeoni@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: pycsou
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/matthieumeo/pycsou-gsp/issues
    Documentation = https://github.com/matthieumeo/pycsou-gsp#README.md
    Source Code = https://github.com/matthieumeo/pycsou-gsp
    User Support = https://github.com/matthieumeo/pycsou-gsp/issues

[options]
packages = find:
install_requires =
    numpy
    pygsp
    healpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

# Note the `_` underscore to overload a base Pycsou class.
[options.entry_points]
pycsou.math =
    my_math_func = pycgsp:my_math_func
pycsou.operator =
    MyLinOp = pycgsp:MyLinOp
    _NullFunc = pycgsp:NullFunc


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml
